WebDAVBrowser: Show the collection URL in the tooltip
The WebDAV editor has columns Name
and Type
. Clicking on Edit does not show the URL of the object.
Please either add column URL, show the URL of the collection as third column, or show the URL at the bottom line, when an WebDAV-object is selected.
The rationale is, that in case many home-sets are returned, all having the same displayname, it is not possible to distinguish between the home-sets.