I#1085 - WebDAVBrowser: Show the collection URL in the tooltip

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1085